--- a/pluralmatrix/app-service/package.json
+++ b/pluralmatrix/app-service/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,16 +13,26 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "5.22.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/jest": "^30.0.0",
     "@types/js-yaml": "^4.0.9",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/marked": "^4.3.2",
     "@types/node": "^25.3.0",
+    "@types/supertest": "^6.0.3",
     "body-parser": "^2.2.2",
     "cors": "^2.8.6",
     "express": "^5.2.1",
+    "jest": "^30.2.0",
     "js-yaml": "^4.1.1",
+    "jsonwebtoken": "^9.0.3",
+    "marked": "^4.3.0",
     "matrix-appservice-bridge": "^11.2.0",
     "matrix-bot-sdk": "^0.8.0",
     "prisma": "5.22.0",
+    "supertest": "^7.2.2",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
