--- a/pluralmatrix/app-service/Dockerfile
+++ b/pluralmatrix/app-service/Dockerfile
@@ -1,19 +1,23 @@
-FROM node:18-slim
+FROM node:22-slim
 
 WORKDIR /app
 
-# Install OpenSSL (Required by Prisma)
+# Install dependencies for building
 RUN apt-get update -y && apt-get install -y openssl ca-certificates
 
+# 1. Build Frontend
+WORKDIR /app/client
+COPY client/package*.json ./
+RUN npm install
+COPY client/ ./
+RUN npm run build
+
+# 2. Build Backend
+WORKDIR /app
 COPY package*.json ./
 RUN npm install
-
 COPY . .
-
-# Generate Prisma Client
 RUN npx prisma generate
-
-# Build TypeScript
 RUN npx tsc
 
 EXPOSE 9000
