feat: implement 'Cinny Cure' for avatars and automate stack lifecycle
- Implement 'Typing Trick': Send ghost typing indicator before messages to force Cinny profile hydration
- Use explicit join payload with profile data to ensure ghosts are born with avatars
- Disable bridge auto-promotion to Moderator by setting 'dontCheckPowerLevel: true'
- Automate DB schema sync and wait-for-postgres in a new Docker entrypoint
- Overhaul 'restart-stack.sh' to manage full network/postgres/synapse/app-service lifecycle
- Clean up Windows metadata files and update .gitignore

--- a/pluralmatrix/app-service/Dockerfile
+++ b/pluralmatrix/app-service/Dockerfile
@@ -20,6 +20,8 @@ COPY . .
 RUN npx prisma generate
 RUN npx tsc
 
-EXPOSE 9000
+COPY docker-entrypoint.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 
-CMD ["node", "dist/index.js"]
+EXPOSE 9000
+ENTRYPOINT ["docker-entrypoint.sh"]
