--- a/pluralmatrix/app-service/package.json
+++ b/pluralmatrix/app-service/package.json
@@ -13,6 +13,8 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "5.22.0",
+    "@types/adm-zip": "^0.5.7",
+    "@types/archiver": "^7.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
@@ -21,6 +23,8 @@
     "@types/marked": "^4.3.2",
     "@types/node": "^25.3.0",
     "@types/supertest": "^6.0.3",
+    "adm-zip": "^0.5.16",
+    "archiver": "^7.0.1",
     "body-parser": "^2.2.2",
     "cors": "^2.8.6",
     "express": "^5.2.1",
