--- a/pluralmatrix/docker-compose.yml
+++ b/pluralmatrix/docker-compose.yml
@@ -32,6 +32,18 @@ services:
     networks:
       - plural-net
 
+  pantalaimon:
+    image: matrixdotorg/pantalaimon:latest
+    container_name: plural-pantalaimon
+    ports:
+      - "8010:8010"
+    volumes:
+      - ./pantalaimon/pantalaimon.conf:/pantalaimon.conf
+      - pantalaimon_data:/data
+    command: -c /pantalaimon.conf --data-path /data
+    networks:
+      - plural-net
+
   app-service:
     build: ./app-service
     container_name: plural-app-service
@@ -55,3 +67,4 @@ networks:
 
 volumes:
   postgres_data:
+  pantalaimon_data:
