--- a/.gitignore
+++ b/.gitignore
@@ -8,20 +8,20 @@ yarn-error.log*
 .eslintcache
 
 # Project specific
-pluralmatrix/app-service/node_modules/
-pluralmatrix/app-service/dist/
-pluralmatrix/app-service/client/node_modules/
-pluralmatrix/app-service/client/dist/
+app-service/node_modules/
+app-service/dist/
+app-service/client/node_modules/
+app-service/client/dist/
 
 # Synapse & Matrix (Secrets and DBs)
 .env
-pluralmatrix/synapse/config/homeserver.yaml
-pluralmatrix/synapse/config/homeserver.db
-pluralmatrix/synapse/config/homeserver.db-shm
-pluralmatrix/synapse/config/homeserver.db-wal
-pluralmatrix/synapse/config/localhost.signing.key
-pluralmatrix/synapse/config/app-service-registration.yaml
-pluralmatrix/synapse/config/media_store/
+synapse/config/homeserver.yaml
+synapse/config/homeserver.db
+synapse/config/homeserver.db-shm
+synapse/config/homeserver.db-wal
+synapse/config/localhost.signing.key
+synapse/config/app-service-registration.yaml
+synapse/config/media_store/
 
 # OS files
 .DS_Store
@@ -29,5 +29,5 @@ Thumbs.db
 
 # Docker
 .dockercache
-pluralmatrix/synapse/modules/plural_gatekeeper.py~
+synapse/modules/plural_gatekeeper.py~
 *:Zone.Identifier
