--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ SYNAPSE_REPORT_STATS=no
 APP_PORT=9000
 AS_TOKEN=secret_token
 JWT_SECRET=replace_me_with_a_long_random_string
+DECRYPTER_PASSWORD=replace_me_with_a_long_random_string
