fix: finalize project-aware hostnames and pantalaimon connectivity

--- a/synapse/config/app-service-registration.yaml.example
+++ b/synapse/config/app-service-registration.yaml.example
@@ -1,7 +1,7 @@
 id: REPLACE_WITH_UNIQUE_ID
 hs_token: REPLACE_WITH_SECURE_TOKEN
 as_token: REPLACE_WITH_SECURE_TOKEN
-url: http://plural-app-service:8008
+url: http://app-service:8008
 sender_localpart: plural_bot
 namespaces:
   users:
