feat: refine setup/restart scripts for clean git state and project isolation

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 POSTGRES_PASSWORD=synapse_password
 DATABASE_URL=postgresql://synapse:synapse_password@postgres:5432/plural_db
 
+# Project Isolation
+PROJECT_NAME=pluralmatrix
+
 # Matrix / Synapse
 SYNAPSE_SERVER_NAME=localhost
 SYNAPSE_REPORT_STATS=no
