feat: setup GitHub Pages with Minima theme and optimized assets
- Configure Jekyll with Minima v3 and dark skin
- Optimize branding assets (resize 4MB lily.png to web-ready versions)
- Update README.md with Jekyll frontmatter and permalink
- Update app-service dashboard to use new favicon
- Move internal plans to .gemini/plans for better organization

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ Thumbs.db
 synapse/modules/plural_gatekeeper.py~
 *:Zone.Identifier
 pantalaimon/pantalaimon.conf
+
+# Jekyll Build Output
+_site/
+
