feat: implement native Matrix E2EE and decommission Pantalaimon
- Integrate matrix-sdk-crypto-nodejs for native encryption/decryption
- Implement MSC3202 (Appservice E2EE) for bot and ghost users
- Implement custom TransactionRouter for reliable to-device event sequencing
- Add direct key dispatcher for guaranteed Megolm session delivery
- Remove Pantalaimon sidecar service and plural_decrypter ghost
- Refactor bridge storage to use consolidated ./data directory
- Restore Zero-Flash redactions and full pk; command set
- Streamline stack management scripts and cleanup workspace

--- a/.gitignore
+++ b/.gitignore
@@ -26,13 +26,16 @@ synapse/config/media_store/
 # OS files
 .DS_Store
 Thumbs.db
+*~
 \#*#
+
+# Matrix bridge stores
+app-service/data/
+app-service/test-crypto-store/
 
 # Docker
 .dockercache
-synapse/modules/plural_gatekeeper.py~
 *:Zone.Identifier
-pantalaimon/pantalaimon.conf
 
 # Jekyll Build Output
 _site/
