feat: implement Rust sidecar for automated cross-signing bootstrapping
- Add /rust-crypto-helper: a native Rust CLI for Master Key generation
- Implement CrossSigningBootstrapper.ts to orchestrate the sidecar subprocess
- Update OlmMachineManager to bootstrap trust identities before initialization
- Optimize Dockerfile with multi-stage builds and dependency caching
- Update docker-compose and restart-stack.sh for root-level build context
- Ensure UIA bypass for Appservice when uploading signatures and keys

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@ Thumbs.db
 app-service/data/
 app-service/test-crypto-store/
 
+# Rust build artifacts
+target/
+rust-crypto-helper/target/
+
 # Docker
 .dockercache
 *:Zone.Identifier
