--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,9 @@ services:
       - plural-net
 
   app-service:
-    build: ./app-service
+    build:
+      context: .
+      dockerfile: ./app-service/Dockerfile
     container_name: ${PROJECT_NAME:-pluralmatrix}-app-service
     restart: unless-stopped
     environment:
