--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,11 @@ services:
       - "9000:9000"
     networks:
       - plural-net
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "50m"
+        max-file: "3"
 
 networks:
   plural-net:
