feat: transition database initialization to Prisma Migrate
- Generate initial baseline SQL migration (0_init) for version control
- Replace legacy `db push` with production-grade `migrate deploy` in entrypoint

--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,11 @@ PROJECT_NAME=pluralmatrix
 # Matrix / Synapse
 SYNAPSE_SERVER_NAME=localhost
 SYNAPSE_REPORT_STATS=no
+SYNAPSE_UID=991
+SYNAPSE_GID=991
+SYNAPSE_URL=http://pluralmatrix-synapse:8008
 
 # App Service
 APP_PORT=9000
 AS_TOKEN=secret_token
 JWT_SECRET=replace_me_with_a_long_random_string
-DECRYPTER_PASSWORD=replace_me_with_a_long_random_string
