feat: enhance setup configuration and parameterize stack variables
- Add SYNAPSE_DOMAIN, SYNAPSE_PORT, and APP_PORT to configuration
- Separate Matrix Server Name and User Domain in setup wizard with clear explanations
- Enable interactive port configuration in setup.sh
- Make docker-compose.yml port mappings and healthchecks dynamic
- Clean up deprecated DECRYPTER_PASSWORD from configuration

--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,11 @@ PROJECT_NAME=pluralmatrix
 
 # Matrix / Synapse
 SYNAPSE_SERVER_NAME=localhost
+SYNAPSE_DOMAIN=localhost
 SYNAPSE_REPORT_STATS=no
 SYNAPSE_UID=991
 SYNAPSE_GID=991
+SYNAPSE_PORT=8008
 SYNAPSE_URL=http://pluralmatrix-synapse:8008
 
 # App Service
