--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       timeout: 5s
       retries: 10
     ports:
-      - "8008:8008"
+      - "${SYNAPSE_PORT:-8008}:8008"
     networks:
       - plural-net
 
@@ -54,9 +54,9 @@ services:
       synapse:
         condition: service_healthy
     ports:
-      - "9000:9000"
+      - "${APP_PORT:-9000}:${APP_PORT:-9000}"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:${APP_PORT:-9000}/health"]
       interval: 30s
       timeout: 10s
       retries: 3
