--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,4 @@ SYNAPSE_URL=http://pluralmatrix-synapse:8008
 APP_PORT=9000
 AS_TOKEN=secret_token
 JWT_SECRET=replace_me_with_a_long_random_string
+CRYPTO_DEVICE_ID=PLURAL_CTX_V9
