--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,11 @@ services:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - plural-net
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U synapse"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   synapse:
     image: matrixdotorg/synapse:latest
@@ -27,7 +32,8 @@ services:
       - ./synapse/config:/data
       - ./synapse/modules:/modules  # Mount our custom module
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8008/_matrix/static/"]
       interval: 5s
@@ -50,7 +56,7 @@ services:
       - app_service_data:/app/data
     depends_on:
       postgres:
-        condition: service_started
+        condition: service_healthy
       synapse:
         condition: service_healthy
     ports:
