feat: disable rate limiting for the app service
- Add rate_limited: false to app-service-registration.yaml.example
- Ensures Synapse doesn't throttle the bridge during high-traffic events

--- a/synapse/config/app-service-registration.yaml.example
+++ b/synapse/config/app-service-registration.yaml.example
@@ -11,6 +11,8 @@ namespaces:
     - exclusive: true
       regex: '#_plural_.*'
 
+rate_limited: false
+
 de.sorunome.msc2409.push_ephemeral: true
 push_ephemeral: true
 
