--- a/app-service/package.json
+++ b/app-service/package.json
@@ -24,6 +24,7 @@
     "@types/marked": "^4.3.2",
     "@types/node": "^25.3.0",
     "@types/supertest": "^6.0.3",
+    "@types/uuid": "^9.0.8",
     "adm-zip": "^0.5.16",
     "archiver": "^7.0.1",
     "better-sqlite3": "^12.6.2",
@@ -41,6 +42,7 @@
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
+    "uuid": "^9.0.1",
     "zod": "^4.3.6"
   }
 }
