--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.7"
-
 services:
   postgres:
     image: postgres:15
@@ -20,7 +18,9 @@ services:
       retries: 5
 
   synapse:
-    image: matrixdotorg/synapse:latest
+    build:
+      context: .
+      dockerfile: ./synapse.Dockerfile
     container_name: ${PROJECT_NAME:-pluralmatrix}-synapse
     restart: unless-stopped
     environment:
@@ -38,7 +38,7 @@ services:
       test: ["CMD", "curl", "-f", "http://localhost:8008/_matrix/static/"]
       interval: 5s
       timeout: 5s
-      retries: 10
+      retries: 20  # Increased for longer build/boot
     ports:
       - "${SYNAPSE_PORT:-8008}:8008"
     networks:
